--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ object_detection/datasets
 object_detection/yolov3/VOCdevkit
 
 *.txt
+!requirements.txt
 *.pt
 object_detection/yolov3/weights
 object_detection/yolov3/runs
