--- a/object_dectction/ultralytics-8.3.166/ultralytics/cfg/models/rt-detr/rtdetr-resnet50.yaml
+++ b/object_dectction/ultralytics-8.3.166/ultralytics/cfg/models/rt-detr/rtdetr-resnet50.yaml
@@ -25,7 +25,7 @@ head:
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [3, 1, Conv, [256, 1, 1, None, 1, 1, False]] # 9
-  - [[-2, -1], 1, Concat, [1]]
+  - [[-2, -1], 1, Concat, [1]] #10
   - [-1, 3, RepC3, [256]] # 11
   - [-1, 1, Conv, [256, 1, 1]] # 12
 
